Fixed some hiding bugs.